--- a/src/components/Authenitcation/Auth.css
+++ b/src/components/Authenitcation/Auth.css
@@ -4,7 +4,6 @@
 #login {
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 78vh;
 }
 
